--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "licenses/server.lua",
         "onset-phone/server.lua",
         "transport/s_busstop.lua",
-        "vehicle_radio/server.lua"
+        "vehicle_radio/server.lua",
+		"taxi/s_npc.lua"
     ],
     "client_scripts": [
         "hunger/client.lua",
@@ -69,7 +70,8 @@
         "medic/client.lua",
         "licenses/client.lua",
         "transport/c_busstop.lua",
-        "vehicle_radio/client.lua"
+        "vehicle_radio/client.lua",
+		"taxi/c_npc.lua"
     ],
     "files": [
         "hud/speaking/speaking.png",
